# telemedicine-desktop

./: .prettierignore  CONSULTATION_WORKFLOW_IMPLEMENTATION.md  ERROR_HANDLING_UX_IMPLEMENTATION.md  OFFLINE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TASK_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  PACKAGING_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  RELEASE_CHECKLIST.md  UPDATER_SETUP.md  USER_MANUAL.md
scripts/: build-release.bat  build-release.sh  build-windows.ps1  post-build.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  auth_tests.rs  database.rs  file.rs  message.rs  mod.rs  patient.rs  security.rs  websocket.rs  window.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  query_optimizer.rs  tests.rs
src-tauri/src/database/dao/: audit_log_dao.rs  consultation_dao.rs  file_cache_dao.rs  medical_record_dao.rs  message_dao.rs  mod.rs  patient_dao.rs  user_dao.rs
src-tauri/src/models/: audit_log.rs  common.rs  consultation.rs  file_cache.rs  medical_record.rs  message.rs  mod.rs  patient.rs  user.rs  window.rs
src-tauri/src/services/: auth.rs  file.rs  message.rs  mod.rs  patient.rs  security.rs  security_test.rs  websocket.rs
src-tauri/src/utils/: crypto.rs  error.rs  mod.rs  validation.rs  validation_simple_test.rs  validation_tests.rs
(+172 files in other folders)
